<resources>
    <string name="app_name">ArtiFact</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="title">File Name :</string>
    <string name="input_name">Input Title</string>
    <string name="file_name">File Name</string>
    <string name="similarity">Similarity</string>
    <string name="detection">Detection</string>
    <string name="iv_login_picture">Login Picture</string>
    <string name="login_title">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="iv_register_picture">Register Picture</string>
    <string name="register_title">Create An Account</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="item_name">Item Name</string>
    <string name="item_similarity">Item Similarity</string>
    <string name="logout_menu">Logout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">History</string>
    <string name="logout_message">Are you sure you want to log out from ArtiFact?</string>
    <string name="iv_logout_picture">Logout Picture</string>
    <string name="logout">Log Out</string>
    <string name="searchbar_hint">Search</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_header_name">Username</string>
    <string name="nav_header_email">User Email</string>
    <string name="menu_logout">Log Out</string>
    <string name="no_have_account">Not have an account?</string>
    <string name="register_here"><u>Register here.</u></string>
    <string name="wrong_data">Email or Password invalid.</string>
    <string name="login_success">Login Successful</string>
    <string name="register_success">Jury registered successfully</string>
    <string name="input_data">All field may not be empty.</string>
    <string name="invalid_email">Invalid email format.</string>
    <string name="invalid_password">Password must be atleast 8 characters long.</string>
    <string name="retry">Retry</string>
    <string name="fab_upload">Upload Image</string>
    <string name="upload_success">Success uploaded</string>
    <string name="empty_description_warning">File name cannot be empty.</string>
    <string name="empty_image_warning">Image cannot be empty.</string>
    <string name="already_have_account">Already have account?</string>
    <string name="login_here"><u>Login here.</u></string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="forgot_title">Reset Password</string>
    <string name="iv_forgot_picture">Forgot Picture</string>
    <string name="forget">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="iv_forget_picture">Forget Icon</string>
    <string name="iv_history_header">Header</string>
    <string name="tv_history_title">Recently Detection</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_bookmark">Bookmark Item</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="account">Account</string>
    <string name="result_text">Label: %1$s\nConfidence: %2$s</string>
    <string name="no_results_found">No results found.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details.</string>
    <string name="result_ai">Detected as AI with confidence: %.2f%%</string>
    <string name="result_human">Detected as Human with confidence: %.2f%%</string>
    <string name="result_unknown">Unknown label (%s) with confidence: %.2f%%</string>
    <string name="result_error">Result Error</string>
    <string name="profile_title">Hi, dewipuspita09!</string>
    <string name="about_us">About Creator</string>
    <string name="cohort">Bangkit 2024 Batch 2 - Cohort</string>
    <string name="group">C242-PS255</string>
    <string name="team">Our Teammates</string>
    <string name="machine_learning">Machine Learning Path</string>
    <string name="advisor">Our Advisors</string>
    <string name="advisor_list">Budi Juarto - Machine Learning/Data/AI\nMichael Ricky - Business/Commerce/Startup</string>
    <string name="member">Our Members</string>
    <string name="member_list">Machine Learning Path:\n - Ahmad Hilmy Rakha Alcander\n - Glendy Bonar P. Simarmata\n - Nadya Ruth Enina Purba\n\nCloud Computing Path:\n - Alfa Sofa Salsabila\n - Antoni\n\nMobile Development (Android) Path:\n - Dewi Puspita</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="emailku">dewipuspita09@gmail.com</string>
</resources>