<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ml.result.ResultActivity">

    <ImageView
        android:id="@+id/iv_item_bookmark"
        android:layout_width="44dp"
        android:layout_height="61dp"
        android:layout_gravity="end"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/item_bookmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_result_header"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:src="@drawable/header_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_base"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/white_full"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/result_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/back_blue"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_base" />

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginStart="12dp"
        android:textSize="16sp"
        android:layout_marginBottom="2dp"
        android:textColor="@color/gradient_first"
        app:layout_constraintBottom_toBottomOf="@+id/back_base"
        app:layout_constraintEnd_toEndOf="@+id/back_base"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_base" />

    <TextView
        android:id="@+id/tv_result_detection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detection"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_result_header" />

    <ImageView
        android:id="@+id/iv_result_image"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginBottom="256dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_detection"
        app:srcCompat="@drawable/baseline_image_24" />

    <TextView
        android:id="@+id/tv_result_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_result_image" />

    <TextView
        android:id="@+id/tv_result_similarity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/similarity"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result_filename" />

</androidx.constraintlayout.widget.ConstraintLayout>